sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:19: error: ':' expected but ')' found.
def minTableau(n):int ={
                ^AlgSelectionSort:29: error: identifier expected but '}' found.
}
^