sort.basic.selection.AlgSelectionSort.scala.code
var lgr = getNombreValeurs
var i = 1
var min =0

def selectionSort() {
  var lgr = getNombreValeurs
  var i = 1
  var min =0
  while(i<=lgr-1){
    min = minTableau(i)
    echange(i,min)
  }
}


// retourne la position de la valeur minimal du tableau
var v =  0
def minTableau(n):int ={
  v = n
  for (t <- n+1 to lgr) {
    if(!plusPetitQue(v,t)){
      v=t
    }
  }
 return(v)
}